--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   db:
-    image: mariadb:latest
+    image: mariadb:10.7
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: root
@@ -10,9 +10,32 @@ services:
     ports:
       - 3306:3306
     networks:
-      - app_network
+      - test_net
     restart: unless-stopped
+    
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+  migrate:
+    image: migrate/migrate:v4.15.2
+    profiles: ["tools"]
+    volumes:
+      - ./db/migrations:/migrations
+    entrypoint:
+      [
+        "migrate",
+        "-path",
+        "/migrations",
+        "-database",
+        "mysql://root:password@/merge?sslmode=disable",
+      ]
+    command: ["up"]
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: on-failure
+
+networks:
+  test_net:
+    external: true
